# docker_ml-fastapi

./: .gitignore  Dockerfile  GUIDE_RENDER_TRAIN.md  GUIDE_TESTS.md  GUIDE_TRAIN_DEPLOY.md  README.md  docker-compose.yml  format_code.bat  format_code.sh  presentation.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy-render.yml  train_model.yml
app/: __init__.py  database.py  main.py  model.py  requirements.txt  schemas.py  settings.py  train_model.py
db/: db.py
db/init/: attrition.sql  prediction.sql
models/: feature_names.joblib  onehot_encoder.joblib  ordinal_encoder.joblib  xgb_best_params.joblib  xgb_booster.json
tests/: test_api.py  test_database.py  test_model.py  test_train_model.py
