[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-fastapi-attrition"
version = "1.0.0"
description = "API de prédiction d'attrition avec FastAPI et XGBoost"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.5",
    "psycopg2-binary>=2.9",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "sqlalchemy>=2.0",
    "xgboost>=2.0",
    "optuna>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "flake8",
    "black",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: tests qui prennent du temps",
    "integration: tests d'intégration nécessitant une base de données",
    "unit: tests unitaires rapides",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
